# kenesparta.dev

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  Trunk.toml  index.html
.github/workflows/: backend.yml  deploy.yml  page.yml
app/: go.mod
assets/css/: main.css  social-links.css
assets/css/components/: nav-links.css
assets/css/pages/: home.css  social-links.css
old/: LICENSE  Makefile  README.md  Trunk.toml  index.html
old/assets/css/pages/: home.css
old/metadata/: 79533aed-961c-4584-9c31-bc8168a389da.md  meta.json
old/src/: components.rs  lib.rs
old/src/components/: heder_links.rs  social_links.rs  sticky_nav_bar.rs
old/src/server/: post.rs
site/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  index.html  package.json  tailwind.config.js  vite.config.ts
site/about/: index.html
site/backend/api/: Cargo.toml
site/backend/cli/: Cargo.toml
site/core/: Cargo.toml
site/core/src/: blog.rs  lib.rs  shared.rs
site/core/src/blog/: entity.rs
site/core/src/blog/entity/: post.rs  post_status.rs
site/core/src/shared/: date.rs  uuid.rs
site/frontend/: Cargo.toml
site/frontend/end2end/tests/: example.spec.ts
site/frontend/src/: app.rs  blog.rs  components.rs  main.rs  pages.rs
site/frontend/src/blog/: dto.rs  repository.rs  server_functions.rs  service.rs
site/frontend/src/components/: blog.rs  go_back.rs  heder_links.rs  social_links.rs  sticky_nav_bar.rs
site/frontend/src/components/blog/: article.rs  card.rs
site/frontend/src/pages/: about.rs  experience.rs  home.rs
site/frontend/src/pages/blog/: blog_list.rs  blog_post.rs
site/frontend/style/: comingsoon.css  fonts.css  global.scss
site/frontend/style/components/: nav-links.css  sticky-nav-bar.css
site/src/: App.tsx  app.rs  blog.rs  components.rs  constants.rs  lib.rs  main.rs  pages.rs
site/src/blog/: blog.rs
site/src/components/: coming.rs  go_back.rs  header.rs  heder_links.rs  sticky_nav_bar.rs
site/src/components/blog/: article.rs  card.rs  tags.rs  utils.rs
site/src/pages/: blog.rs  home.rs  projects.rs
site/src/pages/blog/: blog_list.rs
site/src/profile/: Profile.tsx  SocialLinks.tsx
site/style/: main.css
site/style/components/: header.css  nav-links.css  sticky-nav-bar.css
site/style/pages/: home.css
src/: components.rs  lib.rs  main.rs
src/components/: header.rs  heder_links.rs  social_links.rs
src/pages/: about.rs  home.rs
src/server/post/: post_meta.rs
tf/: Makefile  acm.tf  app-runner-ke-dev.tf  cdn.tf  dns-link.tf  dns-main.tf  dynamodb.tf  ecr.tf  ecs.tf  iam-main.tf  network.tf  static-cdn.tf
tf/backend/: Makefile  main.tf  var.tf
tf/dns/: .env.example  acm.tf  cdn.tf  dns-github.tf  dns-proton.tf  ecs.tf  iam-resume-s3.tf  locals.tf  main.tf  var.tf
web/: package-lock.json  package.json  svelte.config.js
web/src/: app.html  global.css
web/src/lib/component/: ButtonPrimary.svelte  Navbar.svelte
web/src/lib/component/icons/: Github.svelte  Linkedin.svelte
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/p/: +layout.svelte
web/src/routes/p/about/: +page.svelte
web/src/routes/p/blog/: +page.svelte
web/src/routes/p/projects/: +page.svelte
